--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
     <!-- start page-wrapper -->
     <div class="page-wrapper">
       <!-- start preloader -->
-      <div class="preloader">
+      <!-- <div class="preloader">
         <div class="sk-folding-cube">
           <div class="sk-cube1 sk-cube"></div>
           <div class="sk-cube2 sk-cube"></div>
           <div class="sk-cube4 sk-cube"></div>
           <div class="sk-cube3 sk-cube"></div>
         </div>
-      </div>
+      </div> -->
       <!-- end preloader -->
       <!-- Start header -->
       <header id="header" class="tp-site-header tp-header-style-2">
@@ -252,7 +252,10 @@
           <div class="row">
             <div class="col-md-6 col-sm-12 col-12">
               <div class="about-img">
-                <img src="assets/images/logo.png" alt="" />
+                <img
+                  src="https://ak.picdn.net/shutterstock/videos/1036237904/thumb/1.jpg"
+                  alt=""
+                />
                 <div class="video-btn">
                   <ul>
                     <li>
@@ -605,8 +608,8 @@
           <div class="row">
             <div class="col col-lg-6 col-lg-offset-3">
               <div class="section-title text-center">
-                <span>Meet Our Team</span>
-                <h2>Our Expert Volunteer</h2>
+                <span>You can be One</span>
+                <h2>TOP CANCER VOLUNTEERS</h2>
               </div>
             </div>
           </div>
