--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                   </div>
                   <div class="btns">
                     <a href="donate.html" class="theme-btn">Donate Now</a>
-                    <a href="about.html" class="theme-btn-s2">Know More</a>
+                    <a href="https://eclipsetoken.org/releases/ECP-Whitepaper.pdf?__cf_chl_jschl_tk__=f7d97140d8e02d011137856207c440a96689fdc7-1624016749-0-AbR7PuhjOU_LY9itmEK7wChVCtOX84xZErKd657qQqM5-PwhKk7vFjnwo4uRPKjXHUFEiQayyd1zwJaLn4cl_vh7tnUzFEj500gczqtGG-Euf2eb1ss1zBfmnkDMJ5HCmmaRXxYsOckLnUObOoQMVJ32DihJpSehbFH1sPkugyh7Z7F9GHIFR1mIoGqisr_I4W25RgNNEnQ49944JdOdl75UJSUlfxY2WYzk8mfG9Hn5VCecTPQ-cVaUCZHyY1z2u9XLT7DvBvN1OnQ0txRnrCQzQVAOBS1hhY_-Y9oLd2xxvUkvJWt-AJi89pMbOriIIO5XRhxsVIt1Ffc-zVI5jHaAMzt3FnYOH4O_3YSNJaF-WIFuRS-GIEvc_r94Dc-ud2pSGvRIDghA3xuIG0mmNi9-Nw30UVp8eGlE1btXSbnPRmgVhPo2U2QURBBCsdmnhg" class="theme-btn-s2">WHITEPAPER</a>
                   </div>
                 </div>
               </div>
