--- a/index.html
+++ b/index.html
@@ -135,7 +135,11 @@
                   </div>
                   <div class="btns">
                     <a href="donate.html" class="theme-btn">Donate Now</a>
-                    <a href="https://eclipsetoken.org/releases/ECP-Whitepaper.pdf?__cf_chl_jschl_tk__=f7d97140d8e02d011137856207c440a96689fdc7-1624016749-0-AbR7PuhjOU_LY9itmEK7wChVCtOX84xZErKd657qQqM5-PwhKk7vFjnwo4uRPKjXHUFEiQayyd1zwJaLn4cl_vh7tnUzFEj500gczqtGG-Euf2eb1ss1zBfmnkDMJ5HCmmaRXxYsOckLnUObOoQMVJ32DihJpSehbFH1sPkugyh7Z7F9GHIFR1mIoGqisr_I4W25RgNNEnQ49944JdOdl75UJSUlfxY2WYzk8mfG9Hn5VCecTPQ-cVaUCZHyY1z2u9XLT7DvBvN1OnQ0txRnrCQzQVAOBS1hhY_-Y9oLd2xxvUkvJWt-AJi89pMbOriIIO5XRhxsVIt1Ffc-zVI5jHaAMzt3FnYOH4O_3YSNJaF-WIFuRS-GIEvc_r94Dc-ud2pSGvRIDghA3xuIG0mmNi9-Nw30UVp8eGlE1btXSbnPRmgVhPo2U2QURBBCsdmnhg" class="theme-btn-s2">WHITEPAPER</a>
+                    <a
+                      href="https://eclipsetoken.org/releases/ECP-Whitepaper.pdf?__cf_chl_jschl_tk__=f7d97140d8e02d011137856207c440a96689fdc7-1624016749-0-AbR7PuhjOU_LY9itmEK7wChVCtOX84xZErKd657qQqM5-PwhKk7vFjnwo4uRPKjXHUFEiQayyd1zwJaLn4cl_vh7tnUzFEj500gczqtGG-Euf2eb1ss1zBfmnkDMJ5HCmmaRXxYsOckLnUObOoQMVJ32DihJpSehbFH1sPkugyh7Z7F9GHIFR1mIoGqisr_I4W25RgNNEnQ49944JdOdl75UJSUlfxY2WYzk8mfG9Hn5VCecTPQ-cVaUCZHyY1z2u9XLT7DvBvN1OnQ0txRnrCQzQVAOBS1hhY_-Y9oLd2xxvUkvJWt-AJi89pMbOriIIO5XRhxsVIt1Ffc-zVI5jHaAMzt3FnYOH4O_3YSNJaF-WIFuRS-GIEvc_r94Dc-ud2pSGvRIDghA3xuIG0mmNi9-Nw30UVp8eGlE1btXSbnPRmgVhPo2U2QURBBCsdmnhg"
+                      class="theme-btn-s2"
+                      >WHITEPAPER</a
+                    >
                   </div>
                 </div>
               </div>
@@ -238,7 +242,7 @@
                 </div>
                 <div class="features-content">
                   <p>Get Free</p>
-                  <h3>Medical Facilities</h3>
+                  <h3>Medical Aids</h3>
                 </div>
               </div>
             </div>
@@ -468,9 +472,6 @@
                   <li><a data-filter=".Charity" href="#">Charity</a></li>
                   <li>
                     <a data-filter=".Volunteering" href="#">Volunteering</a>
-                  </li>
-                  <li>
-                    <a data-filter=".Sponsorship" href="#">Sponsorship</a>
                   </li>
                 </ul>
               </div>
@@ -1097,7 +1098,8 @@
                         </li>
                         <li><i class="fi flaticon-call"></i>+000123456789</li>
                         <li>
-                          <i class="fi flaticon-envelope"></i>Sadakat@gmail.com
+                          <i class="fi flaticon-envelope"></i
+                          >info@healthecancer.com
                         </li>
                       </ul>
                     </div>
