--- a/about.html
+++ b/about.html
@@ -200,43 +200,64 @@
             </div>
         </div>
         <!-- .tp-breadcumb-area end -->
-        <!-- about-area start-->
-        <div class="about-style-2">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 col-sm-12 col-12">
-                        <div class="about-img">
-                           <img src="assets/images/Volunteers.jpg" alt=""> 
-                            <div class="video-btn">
-                                <ul>
-                                    <li><a href="https://www.youtube.com/embed/uQBL7pSAXR8?autoplay=1" class="video-btn" data-type="iframe">
-                                    <i class="fi flaticon-play-button"></i>
-                                    </a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-sm-12 col-12">
-                        <div class="about-content">
-                            <div class="section-title">
-                                <h2>About Us</h2>
-                            </div>
-                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at ,sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum</p> 
-                            <p> and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum,Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
-                            <div class="btns">
-                                <div><a class="theme-btn" href="about.html">More About Us..</a></div>
-                            </div>
-                            <div class="signature">
-                                <img src="assets/images/img-1.png" alt="">
-                            </div>
-                        </div>
-                    </div>
+    <!-- about-area start-->
+      <div class="about-style-2">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 col-sm-12 col-12">
+              <div class="about-img">
+                <img
+                  src="https://ak.picdn.net/shutterstock/videos/1036237904/thumb/1.jpg"
+                  alt=""
+                />
+                <div class="video-btn">
+                  <ul>
+                    <li>
+                      <!-- <a
+                        href="https://www.youtube.com/embed/uQBL7pSAXR8?autoplay=1"
+                        class="video-btn"
+                        data-type="iframe"
+                      >
+                        <i class="fi flaticon-play-button"></i>
+                      </a> -->
+                    </li>
+                  </ul>
                 </div>
+              </div>
             </div>
+            <div class="col-md-6 col-sm-12 col-12">
+              <div class="about-content">
+                <div class="section-title">
+                  <h2>About Us</h2>
+                </div>
+                <p>
+                  Founded in 2018, HealTheCancer (HTC) is a Blockchain project
+                  conceived out of the need to create a much-needed support
+                  system aimed at providing financial aids, Medical Aids,
+                  and scientists for cancer patients across the world through
+                  the help of millions of donors.
+                </p>
+                <p>
+                  HTC has partnered with some top world charity/health
+                  organizations and is also working to partner with the WHO and
+                  other prominent charity boards. HealTheCancer is determined to
+                  building a world-class community of healthcare
+                  services/assistance for the cancer patients.
+                </p>
+                <div class="btns">
+                  <div>
+                    <a class="theme-btn" href="about.html">More About Us..</a>
+                  </div>
+                </div>
+                <div class="signature">
+                  <!-- <img src="assets/images/img-1.png" alt="" /> -->
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <!-- about-area end-->
-
+      </div>
+      <!-- about-area end-->
 
         <!--features start -->
         <div class="features-area features-area-2">
@@ -271,7 +292,7 @@
                             </div>
                             <div class="features-content">
                                 <p>Get Free</p>
-                                <h3>Medical Facilities</h3>
+                                <h3>Medical Aids</h3>
                             </div>
                         </div>
                     </div>
@@ -280,7 +301,7 @@
         </div>
         <!--features-features end -->
         <!-- case-area-start -->
-        <div class="case-area section-padding">
+        <!-- <div class="case-area section-padding">
             <div class="container">
                 <div class="col-md-6 col-md-offset-3">
                     <div class="section-title text-center">
@@ -413,7 +434,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- case-area-end -->
         <!-- .tp-counter-area start -->
         <div class="tp-counter-area">
@@ -452,51 +473,7 @@
         </div>
         <!-- .tp-counter-area end -->
         <!-- start team-section -->
-        <section class="team-section v2 section-padding">
-            <div class="container">
-                <div class="row">
-                    <div class="col col-lg-6 col-lg-offset-3">
-                        <div class="section-title text-center">
-                            <span>Meet Our Team</span>
-                            <h2>Our Expert Volunteer</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col col-xs-12">
-                        <div class="team-grids clearfix">
-                            <div class="grid">
-                                <div class="img-holder">
-                                    <img src="assets/images/team/team-1.jpg" alt>
-                                </div>
-                                <div class="details">
-                                    <h3><a href="volunteer.html">Devin Robertson</a></h3>
-                                    <p>CEO & Founder</p>
-                                </div>
-                            </div>
-                            <div class="grid">
-                                <div class="img-holder">
-                                    <img src="assets/images/team/team-2.jpg" alt>
-                                </div>
-                                <div class="details">
-                                    <h3><a href="volunteer.html">Rickey Goodman</a></h3>
-                                    <p>Volunteer</p>
-                                </div>
-                            </div>
-                            <div class="grid">
-                                <div class="img-holder">
-                                    <img src="assets/images/team/team-3.jpg" alt>
-                                </div>
-                                <div class="details">
-                                    <h3><a href="volunteer.html">Jean Washington</a></h3>
-                                    <p>Volunteer</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> <!-- end container -->
-        </section>
+        
         <!-- end team-section -->
         <!-- news-letter-section start-->
         <section class="news-letter-section">
